tests/examples/struct.out
version bump: 1.0.0 -> (Breaking) -> 2.0.0
warning: TechnicallyBreaking changes in `Def`
  --> $REPO_PATH/tests/examples/struct.rs:36:5
   |
36 | /     pub struct Def<A=u8> {
37 | |         pub field: A,
38 | |     }
   | |_____^
   |
   = note: NonBreaking (TypeParameterAdded { defaulted: true })
note: TechnicallyBreaking (ItemMadePublic)
  --> $REPO_PATH/tests/examples/struct.rs:37:9
   |
37 |         pub field: A,
   |         ^^^^^^^^^^^^

warning: Breaking changes in `Def2`
  --> $REPO_PATH/tests/examples/struct.rs:40:5
   |
40 | /     pub struct Def2<A=u16> {
41 | |         pub field: A,
42 | |     }
   | |_____^
   |
   = note: NonBreaking (TypeParameterAdded { defaulted: true })
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: u8, found: u16 }) })

warning: Breaking changes in `Efg`
  --> $REPO_PATH/tests/examples/struct.rs:44:5
   |
44 | /     pub struct Efg {
45 | |         pub field: u16,
46 | |     }
   | |_____^
   |
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: u8, found: u16 }) })

warning: TechnicallyBreaking changes in `Fgh`
  --> $REPO_PATH/tests/examples/struct.rs:48:5
   |
48 | /     pub struct Fgh {
49 | |         pub field: u8,
50 | |     }
   | |_____^
   |
note: TechnicallyBreaking (ItemMadePublic)
  --> $REPO_PATH/tests/examples/struct.rs:49:9
   |
49 |         pub field: u8,
   |         ^^^^^^^^^^^^^

warning: Breaking changes in `Ghi`
  --> $REPO_PATH/tests/examples/struct.rs:52:5
   |
52 | /     pub struct Ghi {
53 | |         field: u8,
54 | |     }
   | |_____^
   |
warning: Breaking (ItemMadePrivate)
  --> $REPO_PATH/tests/examples/struct.rs:53:9
   |
53 |         field: u8,
   |         ^^^^^^^^^

warning: Breaking changes in `Hij`
  --> $REPO_PATH/tests/examples/struct.rs:56:5
   |
56 | /     pub struct Hij {
57 | |         field: u8,
58 | |     }
   | |_____^
   |
warning: Breaking (VariantStyleChanged { now_struct: true, total_private: true })
  --> $REPO_PATH/tests/examples/struct.rs:56:5
   |
56 | /     pub struct Hij {
57 | |         field: u8,
58 | |     }
   | |_____^

